--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.2.0",
+    "axios": "^1.6.7",
     "clsx": "^2.1.0",
     "next": "14.1.0",
     "react": "^18",
