--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@google/generative-ai": "^0.2.0",
     "axios": "^1.6.7",
+    "cheerio": "^1.0.0-rc.12",
     "clsx": "^2.1.0",
+    "idb": "^8.0.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
