--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "redis": "^4.6.13",
+    "request-ip": "^3.3.0",
     "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/request-ip": "^0.0.41",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
