--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18",
     "redis": "^4.6.13",
     "request-ip": "^3.3.0",
-    "swr": "^2.2.5"
+    "swr": "^2.2.5",
+    "ts-sse": "^0.0.6"
   },
   "devDependencies": {
     "@types/node": "^20",
