feat: slice and add loader

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.2.0",
+    "@heroicons/react": "^2.1.1",
     "axios": "^1.6.7",
     "cheerio": "^1.0.0-rc.12",
     "clsx": "^2.1.0",
