--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "redis": "^4.6.13",
     "request-ip": "^3.3.0",
     "swr": "^2.2.5",
-    "ts-sse": "^0.0.6"
+    "ts-sse": "^0.0.6",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
