--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cheerio": "^1.0.0-rc.12",
     "clsx": "^2.1.0",
     "idb": "^8.0.0",
+    "js-base64": "^3.7.7",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
