--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.7",
     "cheerio": "^1.0.0-rc.12",
     "clsx": "^2.1.0",
+    "gsap": "^3.12.5",
     "idb": "^8.0.0",
     "js-base64": "^3.7.7",
     "next": "14.1.0",
