--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/generative-ai": "^0.2.0",
     "@heroicons/react": "^2.1.1",
     "axios": "^1.6.7",
+    "browser-image-compression": "^2.0.2",
     "cheerio": "^1.0.0-rc.12",
     "clsx": "^2.1.0",
     "gsap": "^3.12.5",
@@ -22,6 +23,7 @@
     "react-dom": "^18",
     "redis": "^4.6.13",
     "request-ip": "^3.3.0",
+    "sharp": "^0.33.2",
     "swr": "^2.2.5",
     "ts-sse": "^0.0.6",
     "uuid": "^9.0.1"
